--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/baik/
+    - assets/images/kfc/kfc.png
+    - assets/images/mac/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
